--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp",
+    "prod": "gulp build",
     "clean-all": "gulp clean",
     "clean": "gulp clean:code",
     "pretty": "gulp prettify:src"
